2011-03-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/compiler.boot: Coerce constant strings
	to symbols at compile time.

2011-03-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/outform.spad.pamphlet,
	src/algebra/complet.spad.pamphlet: Use symbols in
	OutputForm.

2011-03-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* Makefile.in, src/etc/Makefile.in: Rename axiom to fricas.
	src/etc/axiom: Rename to src/etc/fricas

2011-03-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/Makefile.in, src/algebra/boo-dom1.input:
	Actually compile elliptic functions.

2011-03-03  Alexander Solovets <asolovets@gmail.com>

	* src/etc/axiom: Add '-texmacs' option.

2011-03-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/special2.spad.pamphlet: Add a few elliptic
	functions.

2011-03-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/special2.spad.pamphlet: Add Beta function.

2011-03-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/special2.spad.pamphlet: Improve computation
	of Gamma.

2011-02-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/polset.spad.pamphlet,
	src/algebra/aggcat.spad.pamphlet,
	src/algebra/divisor.spad.pamphlet,
	src/algebra/pattern.spad.pamphlet,
	src/algebra/rule.spad.pamphlet,
	src/algebra/fspace.spad.pamphlet: Do not use braces for sets.
	src/interp/s-parser.boot: Disable handling braces as sets.

2011-02-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/debug.lisp: Use standard output.

2011-02-25  Alexander Solovets <asolovets@gmail.com>

	* src/algebra/texmacs.spad.pamphlet: New file.
	src/algebra/boo-dom1.input,
	src/algebra/exposed.lsp.pamphlet,
	file src/algebra/Makefile.in: Adjust.
	src/interp/setvart.boot, src/interp/int-top.boot,
	src/interp/setvars.boot, src/interp/i-output.boot:
	Call routines for Texmacs output.

2011-02-08  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/c-doc.boot, src/interp/msgdb.boot,