@@ -1,4 +1,9 @@
-2011-03-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+2011-03-06  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/interp/parsing.lisp, src/interp/bootlex.lisp:
+	Better error messages for Spad parsing errors.
+
+2011-03-06  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/interp/compiler.boot: Coerce constant strings
 	to symbols at compile time.
